# argen-demo

./: .env.example  .gitignore  .gitmodules  CORRECTED_EVALUATION_ANALYSIS_SUMMARY.md  DEBUG_README.md  EVALUATION_ANALYSIS_SUMMARY.md  ISSUE_26_IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  WEAVE_INTEGRATION_SUMMARY.md  ablation_test_results_gemini.json  apply_patch.sh  argen-demo.code-workspace  audit_evaluation_files.py  champion_model_analysis.py  champion_model_analysis_claude_only.py  champion_model_report.md  champion_model_report_claude_only.md  chat_template_fix_recommendations.md  check_grpo_config.py  compare_trl_versions.py  consolidated_evaluation_analysis.md  debug_callback.py  debug_completions.py  debug_grpo_generation.py  debug_log.txt  evaluation_files_audit_detailed.csv  evaluation_files_audit_report.md  fix_grpo_chat_template.py  gcp_grpo_todo.md  helpful_champion_analysis.py  helpful_champion_analysis_claude_only.py  helpful_champion_report.md  helpful_champion_report_claude_only.md  logging_fix.py  median_seed_analysis.py  median_seed_analysis_claude_only.py  median_seed_report.md  median_seed_report_claude_only.md  monitor_util.sh  (+32 more)
argen/: __init__.py  config.py  config_weave.py  penalty_config.py  scope_definitions.py
argen-demo-venv/: pyvenv.cfg
commands/: __init__.py  compare_models.py  evaluate_model.py  generate_scenarios.py  process_data.py  train_model.py
custom/: ahimsa.rego  dharma.rego
data/: README.md  adversarial-prompts-hashprompt.jsonl  adversarial-prompts.jsonl  base_model_eval_results_Llama-3.2-1B-Instruct_20250501_163437.json  baseline_comprehensive_results.json  baseline_gemini_results.json  baseline_gemini_results_20250425_110656.json  baseline_gemini_results_20250425_112728.json  baseline_gemini_results_20250425_114540.json  baseline_results.json  (+50 more)
src/: config.py  (+3 more)
(+657 files in other folders)
