[tool.poetry]
name = "argen-demo"
version = "0.1.0"
description = "ArGen GRPO Fine-Tuning with Dharmic Principles"
authors = ["Kapil Madan <kapil.madan@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
lorax-client = { version = ">=0.6.1", python = ">=3.8, <4.0" }
torch = "^2.0.0"
transformers = "^4.30.0"
numpy = "^1.24.0"
tqdm = "^4.65.0"
openai = "^1.12.0"
pydantic = "^2.5.0"
jsonlines = "^3.1.0"
pandas = "^2.1.0"
trl = "^0.17.0"
protobuf = "^6.30.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
